2002-06-01  John Levon  <moz@compsoc.man.ac.uk>

	* make.common.in: make --with-extra-lib work again

	* dae/opd_image.h:
	* dae/opd_image.c: comment typos

	* doc/srcdoc/Doxyfile: generate PNG not GIF 
 
2002-05-23  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/srcdoc/Doxyfile:
	* libopt++/popt_options.cpp:
	* libopt++/popt_options.h:
	* pp/symbol_container_impl.h: small doxygen tweak.

2002-05-23  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/oprofiled.c: minor bug when backing up samples dir

	* libopt++/popt_options.h:
	* libopt++/popt_options.cpp: avoid to force client code to
	  explicitly select the option template specializations.

	* pp/op_merge.cpp:
	* pp/op_time.cpp:
	* pp/op_to_source.pp:
	* pp/oprofpp.cpp: we no longer need explicit template
	  instantiations for options

2002-05-22  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/oprofpp.cpp: fix a missing SAMPLES_DIR prepend

2002-05-22  John Levon  <moz@compsoc.man.ac.uk>

	* lib/util/op_file.c:
	* utils/op_session.c: restore accidentally lost
	  commits :

	2002-05-05  Philippe Elie  <phil.el@wanadoo.fr>

		* dae/op_session.c: tweak error message when session already
		  exist. Avoid to op_dump when profiler is not started.

	2002-05-05  Philippe Elie  <phil.el@wanadoo.fr>

		* dae/op_session.c: do not create empty session directory
		  and backup oprofileg.log too
		* dae/opd_util.c:
		* op_user.h: minor related change

2002-05-22  John Levon  <moz@compsoc.man.ac.uk>

	* dae/*: complete re-organisation of files
 
	* libop/op_config.h: add VMA_OFFSET and MAX_MODULES
	  tunables
 
2002-05-22  Philippe Elie  <phil.el@wanadoo.fr>

	* gui:
	* libdb:
	* libopt++:
	* libutil:
	* libutil++:
	* oprof_report:
	* pp: all C/c++ source/header file, fix a few doxygen warning,
	  many const type to  type const + other minor comestic change.

2002-05-22  John Levon  <moz@compsoc.man.ac.uk>

	* libopt++/popt_options.cpp: my usual boring shit
 
	* libopt++/popt_options.h: document
